<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/User_Profile">
    <!-- Preferencia de nombre de usuario -->
    <EditTextPreference
        android:key="user_name_preference"
        android:title="@string/titleUserName"
        android:summary="@string/textUserName"
        android:inputType="text"
       />

    <!-- Botón de cambiar contraseña -->
    <Preference
        android:key="change_password_preference"
        android:title="@string/titleChangePassword"
        android:summary="@string/textChangePassword"
    />
    <!-- Botón de cerrar sesión (LogOut) -->
    <Preference
        android:key="logout_preference"
        android:title="@string/titleLogOut"
        />

    </PreferenceCategory>

</PreferenceScreen>