<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.StadisticsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCorrectAnswers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txtCorrect"
                android:textColor="@android:color/white"
                android:layout_margin="5sp"
                android:textSize="24sp"
                android:textStyle="bold"
               />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChartCorrect"
                android:layout_width="match_parent"
                android:layout_height="400dp" />

            <TextView
                android:id="@+id/tvIncorrectAnswers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txtIncorrect"
                android:textColor="@android:color/white"
                android:layout_margin="5sp"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChartIncorrect"
                android:layout_width="match_parent"
                android:layout_height="400dp" />

            <TextView
                android:id="@+id/tvNoAnsweredAnswers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txtNoAnswered"
                android:textColor="@android:color/white"
                android:layout_margin="5sp"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChartNoAnswered"
                android:layout_width="match_parent"
                android:layout_height="400dp" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txtByDay"
                android:textColor="@android:color/white"
                android:layout_margin="5sp"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lineChart"
                android:layout_width="match_parent"
                android:layout_height="400dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>